Add simple openFrameworks demo. Need to update for clearer README

--- a/.gitignore
+++ b/.gitignore
@@ -110,6 +110,8 @@ xcuserdata
 
 *.moved-aside
 
+# OpenFrameworks stuff
+
 
 ####
 # UNKNOWN: recommended by others, but I can't discover what these files are
