TonicLib builds into lib/ directory, doesn't need to rebuild for different projects

--- a/.gitignore
+++ b/.gitignore
@@ -110,8 +110,9 @@ xcuserdata
 
 *.moved-aside
 
-# OpenFrameworks stuff
-
+# TONIC-SPECIFIC
+lib/osx/
+lib/iOS/
 
 ####
 # UNKNOWN: recommended by others, but I can't discover what these files are
