Add Windows VS2012 project for TonicStandaloneDemo

--- a/lib/TonicLibVS2012/TonicLib.vcxproj
+++ b/lib/TonicLibVS2012/TonicLib.vcxproj
@@ -16,17 +16,20 @@
     <ClInclude Include="..\..\src\Tonic\ADSR.h" />
     <ClInclude Include="..\..\src\Tonic\BasicDelay.h" />
     <ClInclude Include="..\..\src\Tonic\BufferFiller.h" />
+    <ClInclude Include="..\..\src\Tonic\CombFilter.h" />
     <ClInclude Include="..\..\src\Tonic\CompressorLimiter.h" />
     <ClInclude Include="..\..\src\Tonic\ControlAdder.h" />
     <ClInclude Include="..\..\src\Tonic\ControlConditioner.h" />
     <ClInclude Include="..\..\src\Tonic\ControlCounter.h" />
     <ClInclude Include="..\..\src\Tonic\ControlDbToLinear.h" />
+    <ClInclude Include="..\..\src\Tonic\ControlDelay.h" />
     <ClInclude Include="..\..\src\Tonic\ControlDivider.h" />
     <ClInclude Include="..\..\src\Tonic\ControlFloor.h" />
     <ClInclude Include="..\..\src\Tonic\ControlGenerator.h" />
     <ClInclude Include="..\..\src\Tonic\ControlMetro.h" />
     <ClInclude Include="..\..\src\Tonic\ControlMidiToFreq.h" />
     <ClInclude Include="..\..\src\Tonic\ControlMultiplier.h" />
+    <ClInclude Include="..\..\src\Tonic\ControlParameter.h" />
     <ClInclude Include="..\..\src\Tonic\ControlPrinter.h" />
     <ClInclude Include="..\..\src\Tonic\ControlPulse.h" />
     <ClInclude Include="..\..\src\Tonic\ControlRandom.h" />
@@ -53,6 +56,7 @@
     <ClInclude Include="..\..\src\Tonic\Noise.h" />
     <ClInclude Include="..\..\src\Tonic\RampedValue.h" />
     <ClInclude Include="..\..\src\Tonic\RectWave.h" />
+    <ClInclude Include="..\..\src\Tonic\Reverb.h" />
     <ClInclude Include="..\..\src\Tonic\SineWave.h" />
     <ClInclude Include="..\..\src\Tonic\StereoDelay.h" />
     <ClInclude Include="..\..\src\Tonic\Subtractor.h" />
@@ -66,17 +70,20 @@
     <ClCompile Include="..\..\src\Tonic\ADSR.cpp" />
     <ClCompile Include="..\..\src\Tonic\BasicDelay.cpp" />
     <ClCompile Include="..\..\src\Tonic\BufferFiller.cpp" />
+    <ClCompile Include="..\..\src\Tonic\CombFilter.cpp" />
     <ClCompile Include="..\..\src\Tonic\CompressorLimiter.cpp" />
     <ClCompile Include="..\..\src\Tonic\ControlAdder.cpp" />
     <ClCompile Include="..\..\src\Tonic\ControlConditioner.cpp" />
     <ClCompile Include="..\..\src\Tonic\ControlCounter.cpp" />
     <ClCompile Include="..\..\src\Tonic\ControlDbToLinear.cpp" />
+    <ClCompile Include="..\..\src\Tonic\ControlDelay.cpp" />
     <ClCompile Include="..\..\src\Tonic\ControlDivider.cpp" />
     <ClCompile Include="..\..\src\Tonic\ControlFloor.cpp" />
     <ClCompile Include="..\..\src\Tonic\ControlGenerator.cpp" />
     <ClCompile Include="..\..\src\Tonic\ControlMetro.cpp" />
     <ClCompile Include="..\..\src\Tonic\ControlMidiToFreq.cpp" />
     <ClCompile Include="..\..\src\Tonic\ControlMultiplier.cpp" />
+    <ClCompile Include="..\..\src\Tonic\ControlParameter.cpp" />
     <ClCompile Include="..\..\src\Tonic\ControlPrinter.cpp" />
     <ClCompile Include="..\..\src\Tonic\ControlPulse.cpp" />
     <ClCompile Include="..\..\src\Tonic\ControlRandom.cpp" />
@@ -90,7 +97,9 @@
     <ClCompile Include="..\..\src\Tonic\ControlXYSpeed.cpp" />
     <ClCompile Include="..\..\src\Tonic\DelayUtils.cpp" />
     <ClCompile Include="..\..\src\Tonic\Divider.cpp" />
+    <ClCompile Include="..\..\src\Tonic\Effect.cpp" />
     <ClCompile Include="..\..\src\Tonic\Filters.cpp" />
+    <ClCompile Include="..\..\src\Tonic\FilterUtils.cpp" />
     <ClCompile Include="..\..\src\Tonic\FixedValue.cpp" />
     <ClCompile Include="..\..\src\Tonic\FlexToothWave.cpp" />
     <ClCompile Include="..\..\src\Tonic\Generator.cpp" />
@@ -101,6 +110,7 @@
     <ClCompile Include="..\..\src\Tonic\Noise.cpp" />
     <ClCompile Include="..\..\src\Tonic\RampedValue.cpp" />
     <ClCompile Include="..\..\src\Tonic\RectWave.cpp" />
+    <ClCompile Include="..\..\src\Tonic\Reverb.cpp" />
     <ClCompile Include="..\..\src\Tonic\SineWave.cpp" />
     <ClCompile Include="..\..\src\Tonic\StereoDelay.cpp" />
     <ClCompile Include="..\..\src\Tonic\Subtractor.cpp" />
