--- a/lib/TonicLibVS2012/TonicLib.vcxproj.filters
+++ b/lib/TonicLibVS2012/TonicLib.vcxproj.filters
@@ -108,9 +108,6 @@
     <ClInclude Include="..\..\src\Tonic\FixedValue.h">
       <Filter>src\Tonic</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\Tonic\FlexToothWave.h">
-      <Filter>src\Tonic</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\src\Tonic\Generator.h">
       <Filter>src\Tonic</Filter>
     </ClInclude>
@@ -166,6 +163,15 @@
       <Filter>src\Tonic</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\Tonic\Reverb.h">
+      <Filter>src\Tonic</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\Tonic\SawtoothWave.h">
+      <Filter>src\Tonic</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\Tonic\SquareWave.h">
+      <Filter>src\Tonic</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\Tonic\TriangleWave.h">
       <Filter>src\Tonic</Filter>
     </ClInclude>
   </ItemGroup>
@@ -260,9 +266,6 @@
     <ClCompile Include="..\..\src\Tonic\FixedValue.cpp">
       <Filter>src\Tonic</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\Tonic\FlexToothWave.cpp">
-      <Filter>src\Tonic</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\src\Tonic\Generator.cpp">
       <Filter>src\Tonic</Filter>
     </ClCompile>
@@ -321,6 +324,9 @@
       <Filter>src\Tonic</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\Tonic\Reverb.cpp">
+      <Filter>src\Tonic</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\Tonic\SawtoothWave.cpp">
       <Filter>src\Tonic</Filter>
     </ClCompile>
   </ItemGroup>
