--- a/lib/TonicLibVS2012/TonicLib.vcxproj.filters
+++ b/lib/TonicLibVS2012/TonicLib.vcxproj.filters
@@ -174,6 +174,12 @@
     <ClInclude Include="..\..\src\Tonic\TriangleWave.h">
       <Filter>src\Tonic</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\Tonic\RingBuffer.h">
+      <Filter>src\Tonic</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\Tonic\SampleTable.h">
+      <Filter>src\Tonic</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\Tonic\Adder.cpp">
@@ -327,6 +333,12 @@
       <Filter>src\Tonic</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\Tonic\SawtoothWave.cpp">
+      <Filter>src\Tonic</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\Tonic\RingBuffer.cpp">
+      <Filter>src\Tonic</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\Tonic\SampleTable.cpp">
       <Filter>src\Tonic</Filter>
     </ClCompile>
   </ItemGroup>
