Use wildcards in .vcxproj to reduce Windows maintenance costs

--- a/lib/TonicLibVS2012/TonicLib.vcxproj
+++ b/lib/TonicLibVS2012/TonicLib.vcxproj
@@ -12,117 +12,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\Tonic.h" />
-    <ClInclude Include="..\..\src\Tonic\Adder.h" />
-    <ClInclude Include="..\..\src\Tonic\ADSR.h" />
-    <ClInclude Include="..\..\src\Tonic\BasicDelay.h" />
-    <ClInclude Include="..\..\src\Tonic\BufferFiller.h" />
-    <ClInclude Include="..\..\src\Tonic\CombFilter.h" />
-    <ClInclude Include="..\..\src\Tonic\CompressorLimiter.h" />
-    <ClInclude Include="..\..\src\Tonic\ControlAdder.h" />
-    <ClInclude Include="..\..\src\Tonic\ControlConditioner.h" />
-    <ClInclude Include="..\..\src\Tonic\ControlCounter.h" />
-    <ClInclude Include="..\..\src\Tonic\ControlDbToLinear.h" />
-    <ClInclude Include="..\..\src\Tonic\ControlDelay.h" />
-    <ClInclude Include="..\..\src\Tonic\ControlDivider.h" />
-    <ClInclude Include="..\..\src\Tonic\ControlFloor.h" />
-    <ClInclude Include="..\..\src\Tonic\ControlGenerator.h" />
-    <ClInclude Include="..\..\src\Tonic\ControlMetro.h" />
-    <ClInclude Include="..\..\src\Tonic\ControlMidiToFreq.h" />
-    <ClInclude Include="..\..\src\Tonic\ControlMultiplier.h" />
-    <ClInclude Include="..\..\src\Tonic\ControlParameter.h" />
-    <ClInclude Include="..\..\src\Tonic\ControlPrinter.h" />
-    <ClInclude Include="..\..\src\Tonic\ControlPulse.h" />
-    <ClInclude Include="..\..\src\Tonic\ControlRandom.h" />
-    <ClInclude Include="..\..\src\Tonic\ControlRecorder.h" />
-    <ClInclude Include="..\..\src\Tonic\ControlSnapToScale.h" />
-    <ClInclude Include="..\..\src\Tonic\ControlStepper.h" />
-    <ClInclude Include="..\..\src\Tonic\ControlSubtractor.h" />
-    <ClInclude Include="..\..\src\Tonic\ControlSwitcher.h" />
-    <ClInclude Include="..\..\src\Tonic\ControlTrigger.h" />
-    <ClInclude Include="..\..\src\Tonic\ControlValue.h" />
-    <ClInclude Include="..\..\src\Tonic\ControlXYSpeed.h" />
-    <ClInclude Include="..\..\src\Tonic\DelayUtils.h" />
-    <ClInclude Include="..\..\src\Tonic\Divider.h" />
-    <ClInclude Include="..\..\src\Tonic\Effect.h" />
-    <ClInclude Include="..\..\src\Tonic\Filters.h" />
-    <ClInclude Include="..\..\src\Tonic\FilterUtils.h" />
-    <ClInclude Include="..\..\src\Tonic\FixedValue.h" />
-    <ClInclude Include="..\..\src\Tonic\Generator.h" />
-    <ClInclude Include="..\..\src\Tonic\LFNoise.h" />
-    <ClInclude Include="..\..\src\Tonic\Mixer.h" />
-    <ClInclude Include="..\..\src\Tonic\MonoToStereoPanner.h" />
-    <ClInclude Include="..\..\src\Tonic\Multiplier.h" />
-    <ClInclude Include="..\..\src\Tonic\Noise.h" />
-    <ClInclude Include="..\..\src\Tonic\RampedValue.h" />
-    <ClInclude Include="..\..\src\Tonic\RectWave.h" />
-    <ClInclude Include="..\..\src\Tonic\Reverb.h" />
-    <ClInclude Include="..\..\src\Tonic\RingBuffer.h" />
-    <ClInclude Include="..\..\src\Tonic\SampleTable.h" />
-    <ClInclude Include="..\..\src\Tonic\SawtoothWave.h" />
-    <ClInclude Include="..\..\src\Tonic\SineWave.h" />
-    <ClInclude Include="..\..\src\Tonic\SquareWave.h" />
-    <ClInclude Include="..\..\src\Tonic\StereoDelay.h" />
-    <ClInclude Include="..\..\src\Tonic\Subtractor.h" />
-    <ClInclude Include="..\..\src\Tonic\Synth.h" />
-    <ClInclude Include="..\..\src\Tonic\TableLookupOsc.h" />
-    <ClInclude Include="..\..\src\Tonic\TonicCore.h" />
-    <ClInclude Include="..\..\src\Tonic\TonicFrames.h" />
-    <ClInclude Include="..\..\src\Tonic\TriangleWave.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="..\..\src\Tonic\Adder.cpp" />
-    <ClCompile Include="..\..\src\Tonic\ADSR.cpp" />
-    <ClCompile Include="..\..\src\Tonic\BasicDelay.cpp" />
-    <ClCompile Include="..\..\src\Tonic\BufferFiller.cpp" />
-    <ClCompile Include="..\..\src\Tonic\CombFilter.cpp" />
-    <ClCompile Include="..\..\src\Tonic\CompressorLimiter.cpp" />
-    <ClCompile Include="..\..\src\Tonic\ControlAdder.cpp" />
-    <ClCompile Include="..\..\src\Tonic\ControlConditioner.cpp" />
-    <ClCompile Include="..\..\src\Tonic\ControlCounter.cpp" />
-    <ClCompile Include="..\..\src\Tonic\ControlDbToLinear.cpp" />
-    <ClCompile Include="..\..\src\Tonic\ControlDelay.cpp" />
-    <ClCompile Include="..\..\src\Tonic\ControlDivider.cpp" />
-    <ClCompile Include="..\..\src\Tonic\ControlFloor.cpp" />
-    <ClCompile Include="..\..\src\Tonic\ControlGenerator.cpp" />
-    <ClCompile Include="..\..\src\Tonic\ControlMetro.cpp" />
-    <ClCompile Include="..\..\src\Tonic\ControlMidiToFreq.cpp" />
-    <ClCompile Include="..\..\src\Tonic\ControlMultiplier.cpp" />
-    <ClCompile Include="..\..\src\Tonic\ControlParameter.cpp" />
-    <ClCompile Include="..\..\src\Tonic\ControlPrinter.cpp" />
-    <ClCompile Include="..\..\src\Tonic\ControlPulse.cpp" />
-    <ClCompile Include="..\..\src\Tonic\ControlRandom.cpp" />
-    <ClCompile Include="..\..\src\Tonic\ControlRecorder.cpp" />
-    <ClCompile Include="..\..\src\Tonic\ControlSnapToScale.cpp" />
-    <ClCompile Include="..\..\src\Tonic\ControlStepper.cpp" />
-    <ClCompile Include="..\..\src\Tonic\ControlSubtractor.cpp" />
-    <ClCompile Include="..\..\src\Tonic\ControlSwitcher.cpp" />
-    <ClCompile Include="..\..\src\Tonic\ControlTrigger.cpp" />
-    <ClCompile Include="..\..\src\Tonic\ControlValue.cpp" />
-    <ClCompile Include="..\..\src\Tonic\ControlXYSpeed.cpp" />
-    <ClCompile Include="..\..\src\Tonic\DelayUtils.cpp" />
-    <ClCompile Include="..\..\src\Tonic\Divider.cpp" />
-    <ClCompile Include="..\..\src\Tonic\Effect.cpp" />
-    <ClCompile Include="..\..\src\Tonic\Filters.cpp" />
-    <ClCompile Include="..\..\src\Tonic\FilterUtils.cpp" />
-    <ClCompile Include="..\..\src\Tonic\FixedValue.cpp" />
-    <ClCompile Include="..\..\src\Tonic\Generator.cpp" />
-    <ClCompile Include="..\..\src\Tonic\LFNoise.cpp" />
-    <ClCompile Include="..\..\src\Tonic\Mixer.cpp" />
-    <ClCompile Include="..\..\src\Tonic\MonoToStereoPanner.cpp" />
-    <ClCompile Include="..\..\src\Tonic\Multiplier.cpp" />
-    <ClCompile Include="..\..\src\Tonic\Noise.cpp" />
-    <ClCompile Include="..\..\src\Tonic\RampedValue.cpp" />
-    <ClCompile Include="..\..\src\Tonic\RectWave.cpp" />
-    <ClCompile Include="..\..\src\Tonic\Reverb.cpp" />
-    <ClCompile Include="..\..\src\Tonic\RingBuffer.cpp" />
-    <ClCompile Include="..\..\src\Tonic\SampleTable.cpp" />
-    <ClCompile Include="..\..\src\Tonic\SawtoothWave.cpp" />
-    <ClCompile Include="..\..\src\Tonic\SineWave.cpp" />
-    <ClCompile Include="..\..\src\Tonic\StereoDelay.cpp" />
-    <ClCompile Include="..\..\src\Tonic\Subtractor.cpp" />
-    <ClCompile Include="..\..\src\Tonic\Synth.cpp" />
-    <ClCompile Include="..\..\src\Tonic\TableLookupOsc.cpp" />
-    <ClCompile Include="..\..\src\Tonic\TonicFrames.cpp" />
+    <ClInclude Include="..\..\src\Tonic\*.h" />
+    <ClCompile Include="..\..\src\Tonic\*.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{DA022B2D-D880-4BAB-9CDF-B916F7B6879E}</ProjectGuid>
