Fix linux makefile

--- a/.gitignore
+++ b/.gitignore
@@ -131,6 +131,11 @@ lib/osx/
 lib/iOS/
 
 ####
+# Linux object files
+
+*.o
+
+####
 # UNKNOWN: recommended by others, but I can't discover what these files are
 #
 # ...none. Everything is now explained.
