--- a/Demo/Standalone/Linux/Makefile
+++ b/Demo/Standalone/Linux/Makefile
@@ -1,9 +1,9 @@
 demo: libTonicLib.a
-	g++ -I../../../src ../TonicStandaloneDemo/main.cpp -l rtaudio -L. -l TonicLib -o demo
+	g++ -m32 -I../../../src ../TonicStandaloneDemo/main.cpp -l rtaudio -L. -l TonicLib -o demo
 
 libTonicLib.a:
-	g++ -c -I../../../src -I../../../src/Tonic ../../../src/Tonic/*.cpp
+	g++ -m32 -c -I../../../src -I../../../src/Tonic ../../../src/Tonic/*.cpp
 	ar rc libTonicLib.a *.o
 
 clean:
-	rm *.o *.a demo*
+	rm -rf *.a *.o demo
