improved Cmaking - now crossplatform. massive warnings remaining

--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -11,7 +11,7 @@ file(GLOB TEST_SOURCES *.cpp)
 enable_testing()
 add_definitions("${CFLAGS}")
 link_libraries("${LINK_LIBS}")
-link_libraries("${PRJ_NAME}-static")
+link_libraries("${PRJ_NAME}")
 link_libraries("${EXTRA_LIBS}")
 
 #adding tests foreach test source file
@@ -19,16 +19,16 @@ foreach(filename ${TEST_SOURCES})
 	
 	#get the file name of the source file
 	if(WIN32) 
-		string(REGEX REPLACE ".*\\" "" testname "${filename}" )
+		string(REGEX REPLACE ".*\\\\" "" testname "${filename}" )
 	else(WIN32)
 		string(REGEX REPLACE ".*/" "" testname "${filename}" )
 	endif(WIN32)
 
-	#remove .c extension
+	#remove .cpp extension
 	string(REGEX REPLACE ".cpp" "" testname "${testname}" )
 
 	#create executable
-	add_executable(${testname} ${OBJECTS} ${filename})
+	add_executable(${testname} ${SOURCES} ${filename})
 	#configure for testing
 	add_test(${testname} ${testname})
 
