--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,11 @@
 #include directories helps to include header files
 include_directories(".")
+include_directories("Tonic")
 include_directories(${INCLUDE_DIR})
 
 #get the source filenames to compile
 file(GLOB_RECURSE SOURCES Tonic/*.cpp Tonic/*.h)
 
-add_definitions("${CFLAGS}")
+add_definitions("${CFLAGS} -pedantic")
 
 add_library(${PRJ_NAME} ${SOURCES})
