renamed rtaudio libraries

--- a/examples/Standalone/RTAudio/CMakeLists.txt
+++ b/examples/Standalone/RTAudio/CMakeLists.txt
@@ -57,11 +57,11 @@ endif (CMAKE_COMPILER_IS_GNUCXX)
 
 set(rtaudio_SOURCES RtAudio.cpp)
 
-set(LINKLIBS)
+set(RTAudio_LINKLIBS)
 if (CMAKE_SYSTEM_NAME MATCHES "kNetBSD.*|NetBSD.*")
     message(STATUS "NetBSD detected, using OSS")
     find_package(Threads REQUIRED CMAKE_THREAD_PREFER_PTHREAD)
-    list(APPEND LINKLIBS ossaudio ${CMAKE_THREAD_LIBS_INIT})
+    list(APPEND RTAudio_LINKLIBS ossaudio ${CMAKE_THREAD_LIBS_INIT})
     set(AUDIO_LINUX_OSS ON)
 elseif (UNIX AND NOT APPLE)
     if (NOT AUDIO_LINUX_PULSE AND NOT AUDIO_LINUX_ALSA AND NOT AUDIO_LINUX_OSS AND NOT AUDIO_UNIX_JACK)
@@ -71,7 +71,7 @@ elseif (UNIX AND NOT APPLE)
     if (AUDIO_LINUX_PULSE)
         find_library(PULSE_LIB pulse)
         find_library(PULSESIMPLE_LIB pulse-simple)
-        list(APPEND LINKLIBS ${PULSE_LIB} ${PULSESIMPLE_LIB})
+        list(APPEND RTAudio_LINKLIBS ${PULSE_LIB} ${PULSESIMPLE_LIB})
         add_definitions(-D__LINUX_PULSE__)
         message(STATUS "Using Linux PulseAudio")
     endif (AUDIO_LINUX_PULSE)
@@ -81,7 +81,7 @@ elseif (UNIX AND NOT APPLE)
         if (NOT ALSA_FOUND)
             message(FATAL_ERROR "ALSA API requested but no ALSA dev libraries found")
         endif()
-        list(APPEND LINKLIBS ${ALSA_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
+        list(APPEND RTAudio_LINKLIBS ${ALSA_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
         add_definitions(-D__LINUX_ALSA__)
         message(STATUS "Using Linux ALSA")
     endif (AUDIO_LINUX_ALSA)
@@ -95,7 +95,7 @@ if (APPLE)
     if (AUDIO_OSX_CORE)
         find_library(COREAUDIO_LIB CoreAudio)
         find_library(COREFOUNDATION_LIB CoreFoundation)
-        list(APPEND LINKLIBS ${COREAUDIO_LIB} ${COREFOUNDATION_LIB})
+        list(APPEND RTAudio_LINKLIBS ${COREAUDIO_LIB} ${COREFOUNDATION_LIB})
         add_definitions(-D__MACOSX_CORE__)
         message(STATUS "Using OSX CoreAudio")
     endif (AUDIO_OSX_CORE)
@@ -105,7 +105,7 @@ endif (APPLE)
 if (UNIX)
     if (AUDIO_UNIX_JACK)
         find_library(JACK_LIB jack)
-        list(APPEND LINKLIBS ${JACK_LIB})
+        list(APPEND RTAudio_LINKLIBS ${JACK_LIB})
         add_definitions(-D__UNIX_JACK__)
         message(STATUS "Using JACK")
     endif (AUDIO_UNIX_JACK)
@@ -117,17 +117,17 @@ if (WIN32)
     endif()
 
     include_directories(include)
-    list(APPEND LINKLIBS winmm ole32)
+    list(APPEND RTAudio_LINKLIBS winmm ole32)
 
     if (AUDIO_WINDOWS_DS)
         add_definitions(-D__WINDOWS_DS__)
         message(STATUS "Using Windows DirectSound")
-        list(APPEND LINKLIBS dsound)
+        list(APPEND RTAudio_LINKLIBS dsound)
     endif (AUDIO_WINDOWS_DS)
     if (AUDIO_WINDOWS_WASAPI)
         add_definitions(-D__WINDOWS_WASAPI__)
         message(STATUS "Using Windows WASAPI")
-        list(APPEND LINKLIBS uuid ksuser)
+        list(APPEND RTAudio_LINKLIBS uuid ksuser)
     endif (AUDIO_WINDOWS_WASAPI)
     if (AUDIO_WINDOWS_ASIO)
         list(APPEND rtaudio_SOURCES
@@ -143,7 +143,7 @@ endif (WIN32)
 # add_library(rtaudio SHARED ${rtaudio_SOURCES})
 # add_library(rtaudio_static STATIC ${rtaudio_SOURCES})
 
-# target_link_libraries(rtaudio ${LINKLIBS})
+# target_link_libraries(rtaudio ${RTAudio_LINKLIBS})
 
 # if (BUILD_TESTING)
 #    add_subdirectory(tests)
