--- a/examples/Standalone/RTAudio/CMakeLists.txt
+++ b/examples/Standalone/RTAudio/CMakeLists.txt
@@ -113,7 +113,7 @@ endif (UNIX)
 
 if (WIN32)
     if (NOT AUDIO_WINDOWS_DS AND NOT AUDIO_WINDOWS_ASIO AND NOT AUDIO_WINDOWS_WASAPI)
-        set(AUDIO_WINDOWS_WASAPI ON)
+        set(AUDIO_WINDOWS_DS ON)
     endif()
 
     include_directories(include)
