changed << to < < to make xcode happy

--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,5 @@ lib/iOS/
 # UNKNOWN: recommended by others, but I can't discover what these files are
 #
 # ...none. Everything is now explained.
+
+examples/Standalone_sketchbook/*
